# meme-generator

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker.yaml  sync.yaml  update.yaml
docker/: config.toml.template  start.sh
meme_generator/: __init__.py  app.py  config.py  download.py  tags.py  utils.py
meme_generator/meme/memes_other/infinitynikki_start/: __init__.py
meme_generator/meme/memes_other/other_toy/: __init__.py
meme_generator/memes/: README.md
meme_generator/memes_emoji/: README.md
meme_generator/memes_other/: README.md
meme_generator/memes_other/cool_blanket/: __init__.py
meme_generator/memes_other/penguin_shake_head/: __init__.py
meme_generator/memes_other/sausage/: __init__.py
resources/: resource_list.json
tools/: update_resource_list.py
