[project]
name = "meme-generator"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
  {name = "shiwuliya", email = "3369906077@qq.com"},
  {name = "meetwq", email = "meetwq@gmail.com"},
]
homepage = "https://github.com/CandriaJS/meme-generator"
repository = "https://github.com/CandriaJS/meme-generator"
requires-python = ">=3.12"
dependencies = [
"httpx>=0.20.0,<1.0.0",
"loguru>=0.6.0,<1.0.0",
"pil-utils>=0.2.0",
"Pillow>=10.0.0",
"toml>=0.10.2",
"fastapi>=0.93.0,<1.0.0",
"uvicorn>=0.20.0,<1.0.0",
"python-multipart>=0.0.9,<0.1.0,!=0.0.13,!=0.0.14",
"filetype>=1.2.0",
"rich>=13.0.0",
"dateparser>=1.2.0",
"qrcode>=8.0",
"typing-extensions>=4.4.0,<5.0.0",
"arclet-alconna>=1.8.23,!=1.8.27",
"arclet-alconna-tools>=0.7.9",
"skia-python>=138.0"
]

[project.scripts]
meme = "meme_generator.cli:main"

[tool.poetry.scripts]
meme = "meme_generator.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[tool.uv.build-backend]
source-exclude = ["meme_generator/memes/*.{jpg,png,gif}"]
module-name = "meme_generator"
module-root = ""

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "basic"
defineConstant = { PYDANTIC_V2 = true }

[build-system]
requires = ["uv_build>=0.7.4,<0.8.0"]
build-backend = "uv_build"


[tool.poetry]
name = "meme-generator"
version = "0.1.2"
description = "Python package for making fun pictures"
authors = ["shiwuliya <3369906077@qq.com>", "meetwq <meetwq@gmail.com>"]
license = "GNU-3.0"
readme = "README.md"
homepage = "https://github.com/CandriaJS/meme-generator"
repository = "https://github.com/CandriaJS/meme-generator"
exclude = [
    "meme_generator/memes/*.{jpg,png,gif}"
]

[tool.poetry.dependencies]
python = "^3.12"
httpx = ">=0.20.0,<1.0.0"
loguru = ">=0.6.0,<1.0.0"
pil-utils = "^0.2.0"
Pillow = "^10.0.0"
toml = "^0.10.2"
fastapi = ">=0.93.0,<1.0.0"
uvicorn = ">=0.20.0,<1.0.0"
python-multipart = ">=0.0.9,<0.1.0,!=0.0.13,!=0.0.14"
filetype = "^1.2.0"
rich = "^13.0.0"
dateparser = "^1.2.0"
qrcode = "^8.0"
typing-extensions = ">=4.4.0,<5.0.0"
arclet-alconna = "^1.8.23,!=1.8.27"
arclet-alconna-tools = "^0.7.9"
skia-python = ">=138.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.2.0"
pytest = ">=8.4.1"
mypy = ">=1.17.0"
ruff = ">=0.12.4"

